--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/registrar-liquidacion-contrato/registrar-liquidacion-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/registrar-liquidacion-contrato/registrar-liquidacion-contrato.component.html
@@ -21,7 +21,7 @@
         <span class="info-text en-proceso">En proceso</span>
         <span class="info-text completo">Completo</span>
     </p>
-    <mat-accordion *ngIf="listaAcordeonSinRegistro.length > 0 || listaAcordeonEnProcesoFirma.length > 0 || listaAcordeonLiquidado.length > 0">
+    <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title" [ngClass]="semaforoSinRegistro">
