--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-en-proceso-de-firmas-rlc/tabla-en-proceso-de-firmas-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-en-proceso-de-firmas-rlc/tabla-en-proceso-de-firmas-rlc.component.html
@@ -14,7 +14,7 @@
         <ng-container matColumnDef="fechaSolicitud">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de la solicitud </th>
             <td mat-cell *matCellDef="let element"> <b>{{ element.fechaSolicitud }}</b> </td>
-        </ng-container>        
+        </ng-container>
         <ng-container matColumnDef="numeroSolicitud">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de la solicitud </th>
             <td mat-cell *matCellDef="let element"> <em>{{ element.numeroSolicitud }}</em> </td>
@@ -29,7 +29,7 @@
         </ng-container>
         <ng-container matColumnDef="estadoRegistro">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro </th>
-            <td mat-cell *matCellDef="let element"> 
+            <td mat-cell *matCellDef="let element">
                 <span   class="info-text info-text__table"
                         [ngClass]="{'sin-diligenciar' : element.registroCompleto === false, 'completo' : element.registroCompleto === true}">
                 </span>
@@ -46,15 +46,19 @@
                 <button mat-raised-button
                         color="accent"
                         class="btn-table"
-                        (click)="this.verDetalleEditar(element.id)"
-                        *ngIf="element.estadoRegistro=='Completo'&&element.estadoDocumento=='Firmado'">
-                        Liquidar
-                </button>
-                <button mat-raised-button
-                        color="accent"
-                        class="btn-table"
                         [routerLink]="[ 'verDetalleEditarSolicitud', element.contratoId ]">
                         Ver detalle/Editar
+                </button>
+                <button
+                  *ngIf="element.registroCompleto == true  && element.estadoSolicitudCodigo == '19' "
+                  mat-button
+                  mat-raised-button
+                  color="accent"
+                  class="btn-table"
+                  type="button"
+                  (click)="enviarALiquidacion(element.contratoId)"
+                >
+                Liquidar
                 </button>
             </td>
         </ng-container>
