--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/ver-detalle-informe-final/ver-detalle-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/ver-detalle-informe-final/ver-detalle-informe-final.component.html
@@ -20,4 +20,5 @@
   <app-datos-del-proyecto *ngIf="report" [report]="report" [existeObservacionApoyo]="existeObservacionApoyo" [existeObservacionCumplimiento]="existeObservacionCumplimiento"></app-datos-del-proyecto>
   <app-detalle-observaciones-recibo-satisfaccion *ngIf="report" [report]="report" [existeObservacionSupervision]="existeObservacionSupervision"></app-detalle-observaciones-recibo-satisfaccion>
   <app-tabla-detalle-informe-anexos *ngIf="report" [id]="report.proyecto.informeFinal[0].informeFinalId" [llaveMen]="report.proyecto.llaveMen"></app-tabla-detalle-informe-anexos>
+  <!-- bug 378 <app-tabla-historial-observaciones></app-tabla-historial-observaciones> -->
 </section>
