--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/ver-detalle-informe-final/ver-detalle-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/ver-detalle-informe-final/ver-detalle-informe-final.component.html
@@ -26,4 +26,5 @@
   <app-datos-del-proyecto *ngIf="report" [report]="report"></app-datos-del-proyecto>
   <app-detalle-recibo-satisfaccion *ngIf="report" [report]="report"></app-detalle-recibo-satisfaccion>
   <app-tabla-detalle-informe-anexos [id]="id"></app-tabla-detalle-informe-anexos>
+  <!-- bug 378 <app-tabla-historial-observaciones></app-tabla-historial-observaciones> -->
 </section>
