--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/actualizacion-poliza-gtlc/actualizacion-poliza-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/actualizacion-poliza-gtlc/actualizacion-poliza-gtlc.component.html
@@ -158,7 +158,7 @@
                   <strong>
                     Vigencia actualizada de la póliza:
                   </strong>
-                  {{ seguro?.seguroPoliza?.vigencia | date: 'dd/MM/yyyy' }}
+                  {{ seguro.fechaSeguro | date: 'dd/MM/yyyy' }}
                 </p>
               </div>
               <div class="mb-2em" *ngIf="seguro.tieneFechaAmparo === true">
